# 2DAnatomyDatasets

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/hf/: drive_segformer.py
configs/mmdet/: paxray_maskrcnn.py  teeth_maskrcnn.py
configs/mmseg/: drive_unet.py  paxray_perchannel.py
configs/smp/: drive_unet.py  paxray_unet.py
docs/: CITATIONS.bib  DATASETS.md
notebooks/: Download_datasets.ipynb
scripts/: gen_teaser.py
src/anatomy_datasets/: __init__.py  _discovery.py  base.py  postprocess.py  registry.py  stats.py  transforms.py
src/anatomy_datasets/adapters/: __init__.py  mmdet.py  mmseg.py
src/anatomy_datasets/datasets/: __init__.py  bs80k.py  chasedb1.py  drive.py  duke.py  fives.py  hrf.py  jsrt.py  jump_broadcast.py  lesav.py  medaka_heart.py  montgomery.py  paxray.py  paxraypp.py  ravir.py  stare.py  teeth.py
src/anatomy_datasets/exporters/: __init__.py  coco.py  hf.py  mmseg.py
src/anatomy_datasets/formats/: __init__.py  sharded_coco.py
src/data/: __init__.py  base_dataloaders.py  bs80k_dataloaders.py  duke_dataloaders.py  jsrt_dataloaders.py  paxray_dataloaders.py  paxraypp_dataloaders.py  ravir_dataloaders.py  teeth_dataloaders.py  transforms.py
src/prepare_data/prepare_bs80k/: aggregate_images.py  download_bs80k.py  download_bs80k_anatomy.py  get_bs80k_full.sh
src/prepare_data/prepare_chasedb1/: download_chasedb1.py  get_chasedb1_full.sh  prepare_chasedb1_labels.py  prepare_chasedb1_splits.py
src/prepare_data/prepare_drive/: download_drive.py  get_drive_full.sh  prepare_drive_labels.py  prepare_drive_splits.py
src/prepare_data/prepare_duke/: download_duke.py  get_duke_full.sh  prepare_duke.py  prepare_duke_splits.py
src/prepare_data/prepare_fives/: download_fives.py  get_fives_full.sh  prepare_fives_labels.py  prepare_fives_splits.py  verify_fives_visually.py
src/prepare_data/prepare_hrf/: download_hrf.py  get_hrf_full.sh  prepare_hrf_labels.py  prepare_hrf_splits.py  verify_hrf_visually.py
src/prepare_data/prepare_jsrt/: download_jsrt.py  get_jsrt_full.sh  prepare_jsrt.py  prepare_jsrt_splits.py  (+1 more)
src/training/: train.py
src/visualization/: visualize.py
(+56 files in other folders)
